AnthemCode/objects/Attendance_Details__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Status__c</fullName>
        <formula>TEXT(AttendeeID__r.EventApi__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttendeeID__c</fullName>
        <label>AttendeeID</label>
        <referenceTo>EventApi__Attendee__c</referenceTo>
        <relationshipLabel>Attendance Details</relationshipLabel>
        <relationshipName>Attendance_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Files_Downloaded__c</fullName>
        <label>Files_Downloaded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Login_Time__c</fullName>
        <label>First Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Logout_Time__c</fullName>
        <label>Last Logout Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QnA__c</fullName>
        <label>QnA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attendance Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Attendance Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>